# qwery

./: README.md  pyproject.toml
src/qwery/: __init__.py  constants.py  db.py  llm.py  template.py
src/qwery/utils/: fetch_schema.py  run_sql.py  safe_sql.py  table.py
