[project]
name = "qwery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "olieksandr alieksieiev", email = "gold00439@proton.me" }
]
dependencies = [
    "psycopg2-binary>=2.9.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qwery"]
